[package]
name = "raydium-amm-cpi"
version = "0.1.0"
description = "CPI adapter for Raydium AMM"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_amm_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.31.0"
anchor-spl = "=0.31.0"
