[package]
name = "raydium-locking-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_locking_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.0", features = ["memo"] }
raydium-clmm-cpi = { path = "../clmm-cpi" }
raydium-cpmm-cpi = { path = "../cpmm-cpi" }
